src/objects/Application_Version__c.object
<CustomObject>
    <description>The version of an application.</description>
    <fields>
        <fullName>Application_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this version of the application available to download</description>
        <inlineHelpText>Check to make this version available to the CKWs</inlineHelpText>
        <label>Application Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <description>The name of the application that this version is for</description>
        <label>Application Name</label>
        <picklist>
            <picklistValues>
                <fullName>pulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ckw search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ckw surveys</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Package__c</fullName>
        <description>The package for this application as it is on the phone</description>
        <label>Application Package</label>
        <picklist>
            <picklistValues>
                <fullName>applab.pulse.client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>applab.search.client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>applab.surveys.client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>applab.client.search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>applab.client.surveys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>applab.client.pulse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Version__c</fullName>
        <description>The version number for the application.</description>
        <inlineHelpText>The format for this is YYYYMMDDNN</inlineHelpText>
        <label>Application Version</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Url__c</fullName>
        <label>Download Url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Name_Human_Readable__c</fullName>
        <description>The human readable version name E.g. 2.10, 2.11-pre3</description>
        <label>Version Name (Human Readable)</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Application Version</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Available__c</columns>
        <columns>Application_Name__c</columns>
        <columns>Application_Package__c</columns>
        <columns>Application_Version__c</columns>
        <columns>Download_Url__c</columns>
        <columns>Version_Name_Human_Readable__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AppV-{0000}</displayFormat>
        <label>Application Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Versions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>